[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/ui/player_ui/PlayerUI.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/weapon_bar/background.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/health_mana/mana.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/pause_menu/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/ui/health_mana/background.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/health_mana/health.png" type="Texture" id=6]
[ext_resource path="res://scenes/ui/mini_map/MiniMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/craft-pixel.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 8 )

[node name="PlayerUI" type="Control"]
script = ExtResource( 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]

[node name="PressESCforHelp" type="Label" parent="."]
margin_left = 14.0
margin_top = 112.0
margin_right = 130.0
margin_bottom = 126.0
text = "Press ESC for Help"

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 14.0
margin_top = 8.0
margin_right = 62.0
margin_bottom = 14.0
rect_scale = Vector2( 7, 7 )
max_value = 7.0
rounded = true
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="TextureProgress" parent="."]
margin_left = 14.0
margin_top = 54.0
margin_right = 62.0
margin_bottom = 60.0
rect_scale = Vector2( 7, 7 )
max_value = 7.0
rounded = true
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )

[node name="MiniMap" parent="." instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = 727.0
margin_top = 21.0
margin_right = 988.0
margin_bottom = 217.0

[node name="DungeonInstructions" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 12.0
margin_top = 538.0
margin_right = 52.0
margin_bottom = 578.0

[node name="DashCooldown" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_top = 4.0
margin_right = 42.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "0.2"

[node name="Slot1" type="Sprite" parent="HBoxContainer"]
position = Vector2( 80, 17 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Slot1Icon" type="Sprite" parent="HBoxContainer/Slot1"]
unique_name_in_owner = true

[node name="Slot2" type="Sprite" parent="HBoxContainer"]
position = Vector2( 153, 17 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Slot2Icon" type="Sprite" parent="HBoxContainer/Slot2"]
unique_name_in_owner = true
